--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,16 @@
 {
   "name": "server",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
-    "prd": "pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "co": "^4.6.0",
-    "debug": "^2.6.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "koa": "^1.4.0",
-    "koa-bodyparser": "^2.5.0",
-    "koa-json": "^1.1.3",
-    "koa-logger": "^1.3.1",
-    "koa-onerror": "^1.3.1",
-    "koa-router": "^5.4.0",
-    "koa-static": "^1.5.2",
-    "koa-views": "^3.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.8.1"
+    "morgan": "~1.9.1"
   }
 }
